--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "openai": "^5.23.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
