--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://saferestore.onrender.com/api/:path*"
+    }
+  ]
+}
+
+{
+  "rewrites": [
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
