--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,14 @@
     }
   ]
 }
+{
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://saferestore.onrender.com/api/:path*"
+    }
+  ]
+}
 
 {
   "rewrites": [
